Replace site.url where site.baseurl was meant.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
     <meta name="twitter:site" content="@TwoBitHistory" />
 
     <!-- OpenGraph -->
-    <meta property="og:image" content="{{site.url}}{% link images/logo.png %}" />
-    <meta property="og:url" content="{{site.url}}{{page.url}}" />
+    <meta property="og:image" content="{{site.baseurl}}{% link images/logo.png %}" />
+    <meta property="og:url" content="{{site.baseurl}}{{page.url}}" />
     <meta property="og:title" content="{{page.title}}" />
     <meta property="og:description" content="{{page.description}}" />
 
@@ -48,20 +48,20 @@
         <nav>
           <ul>
             <li>
-              <a href="{{site.url}}{% link index.html %}">Home</a>
+              <a href="{{site.baseurl}}{% link index.html %}">Home</a>
             </li>
             <li>
-              <a href="{{site.url}}{% link about.html %}">About</a>
+              <a href="{{site.baseurl}}{% link about.html %}">About</a>
             </li>
             <li>
-              <a href="{{site.url}}{% link timeline.html %}">Timeline</a>
+              <a href="{{site.baseurl}}{% link timeline.html %}">Timeline</a>
             </li>
           </ul>
         </nav>
         <ul>
           <li>
             <a href="https://twitter.com/TwoBitHistory">
-              <img class="icon" src="{{site.url}}{% link images/twitter.svg %}" />
+              <img class="icon" src="{{site.baseurl}}{% link images/twitter.svg %}" />
             </a>
           </li>
         </ul>
@@ -70,7 +70,7 @@
     <main>
       <header>
         <h1 class="code-title">
-          <a class="title-link" href="{{site.url}}{% link index.html %}">
+          <a class="title-link" href="{{site.baseurl}}{% link index.html %}">
             0b10
           </a>
         </h1>
@@ -81,25 +81,25 @@
         <nav>
           <ul>
             <li>
-              <a href="{{site.url}}{% link index.html %}">Home</a>
+              <a href="{{site.baseurl}}{% link index.html %}">Home</a>
             </li>
             <li>
-              <a href="{{site.url}}{% link about.html %}">About</a>
+              <a href="{{site.baseurl}}{% link about.html %}">About</a>
             </li>
             <li>
-              <a href="{{site.url}}{% link timeline.html %}">Timeline</a>
+              <a href="{{site.baseurl}}{% link timeline.html %}">Timeline</a>
             </li>
           </ul>
         </nav>
         <ul>
           <li>
             <a href="https://twitter.com/TwoBitHistory">
-              <img class="icon" src="{{site.url}}{% link images/twitter.svg %}" />
+              <img class="icon" src="{{site.baseurl}}{% link images/twitter.svg %}" />
             </a>
           </li>
           <li>
-            <a href="{{site.url}}/feed.xml">
-              <img class="icon" src="{{site.url}}{% link images/feed.png %}" />
+            <a href="{{site.baseurl}}/feed.xml">
+              <img class="icon" src="{{site.baseurl}}{% link images/feed.png %}" />
             </a>
           </li>
         </ul>
