--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,7 +120,7 @@
           var header = document.querySelector('.mobile-header');
           if (header) {
             var handleToggle = function(e) {
-                if (e.target && e.target.matches('a'))
+                if (e.target && (e.target.matches('a') || e.target.matches('img')))
                   return;
 
                 e.preventDefault();
