OpenGraph tags should use absolute URLs.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
     <meta name="twitter:site" content="@TwoBitHistory" />
 
     <!-- OpenGraph -->
-    <meta property="og:image" content="{{site.baseurl}}{% link images/logo.png %}" />
-    <meta property="og:url" content="{{site.baseurl}}{{page.url}}" />
+    <meta property="og:image" content="{{site.url}}{{site.baseurl}}{% link images/logo.png %}" />
+    <meta property="og:url" content="{{site.url}}{{site.baseurl}}{{page.url}}" />
     <meta property="og:title" content="{{page.title}}" />
     <meta property="og:description" content="{{page.description}}" />
 
