Code blocks have white-space: pre.

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -18,6 +18,6 @@ pre {
     border: 1px solid $pre-border-color;
     border-radius: 5px;
     padding: 0.1em 0.3em;
-    white-space: pre-line;
+    white-space: pre;
 }
 
