--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -24,3 +24,6 @@ $languages-tag-border-color: darken($languages-tag-background-color, 20%);
 
 $papers-tag-background-color: hsl(175, 60, 90);
 $papers-tag-border-color: darken($papers-tag-background-color, 20%);
+
+$networking-tag-background-color: hsl(225, 60, 90);
+$networking-tag-border-color: darken($networking-tag-background-color, 20%);
