Update subscribe include for four weeks.

--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,5 +1,5 @@
 <p><em>
-If you enjoyed this post, more like it come out every two weeks! Follow
+If you enjoyed this post, more like it come out every four weeks! Follow
 <a href="https://twitter.com/TwoBitHistory">
   @TwoBitHistory
 </a> on Twitter or subscribe to the
