Add greatest hits page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,9 @@
             <li>
               <a href="{{site.baseurl}}{% link timeline.html %}">Timeline</a>
             </li>
+            <li>
+              <a href="{{site.baseurl}}{% link hits.html %}">Greatest Hits</a>
+            </li>
           </ul>
         </nav>
         <ul>
@@ -88,6 +91,9 @@
             </li>
             <li>
               <a href="{{site.baseurl}}{% link timeline.html %}">Timeline</a>
+            </li>
+            <li>
+              <a href="{{site.baseurl}}{% link hits.html %}">Greatest Hits</a>
             </li>
           </ul>
         </nav>
