Add translations page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,11 @@
             <li>
               <a href="{{site.baseurl}}{% link hits.html %}">Greatest Hits</a>
             </li>
+            <li>
+              <a href="{{site.baseurl}}{% link translations.html %}">
+                Translations
+              </a>
+            </li>
           </ul>
         </nav>
         <ul>
@@ -94,6 +99,11 @@
             </li>
             <li>
               <a href="{{site.baseurl}}{% link hits.html %}">Greatest Hits</a>
+            </li>
+            <li>
+              <a href="{{site.baseurl}}{% link translations.html %}">
+                Translations
+              </a>
             </li>
           </ul>
         </nav>
