Update to latest 2.x.x MathJax. MathJax 3 has compatability issues with Kramdown and Github Pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,9 @@
 
     <!-- MathJax -->
     {% if page.has_math %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    <script type="text/javascript" async
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
     {% endif %}
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
