Use overflow: auto; to remove unnecessary scrollbars.

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -7,7 +7,7 @@ pre {
     border: 1px solid $pre-border-color;
     border-radius: 5px;
     padding: 12px;
-    overflow: scroll;
+    overflow: auto;
     margin: 1.8em 0;
 }
 
