--- a/_sass/_table.scss
+++ b/_sass/_table.scss
@@ -2,11 +2,12 @@
 
 .table-container {
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 table {
     border-collapse: collapse;
+    margin: auto;
 }
 
 th, td {
