Add Chartbeat tracker.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,30 @@
     </script>
     {% endif %}
 
+    <!-- Chartbeat -->
+    <script type='text/javascript'>
+    (function() {
+        /** CONFIGURATION START **/
+        var _sf_async_config = window._sf_async_config = (window._sf_async_config || {});
+        _sf_async_config.uid = 1;
+        _sf_async_config.domain = 'twobithistory.org';
+        _sf_async_config.useCanonical = true;
+        _sf_async_config.useCanonicalDomain = true;
+        _sf_async_config.sections = ''; //SET PAGE SECTION(S)
+        _sf_async_config.authors = ''; //SET PAGE AUTHOR(S)
+        /** CONFIGURATION END **/
+        function loadChartbeat() {
+            var e = document.createElement('script');
+            var n = document.getElementsByTagName('script')[0];
+            e.type = 'text/javascript';
+            e.async = true;
+            e.src = '//static.chartbeat.com/js/chartbeat.js';
+            n.parentNode.insertBefore(e, n);
+        }
+        loadChartbeat();
+     })();
+    </script>
+
   </head>
   <body>
     <!-- content -->
