--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,7 @@
         _sf_async_config.useCanonicalDomain = true;
         _sf_async_config.sections = ''; //SET PAGE SECTION(S)
         _sf_async_config.authors = ''; //SET PAGE AUTHOR(S)
+        _sf_async_config.moduleAttribute = 'data-cb-module-name';
         /** CONFIGURATION END **/
         function loadChartbeat() {
             var e = document.createElement('script');
